--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -5,47 +5,46 @@ body{
 
 h1{
    text-align: center;
-   font-family: 'Bungee Outline', cursive;
-   font-size: 50px;
-   background-color: rgba(182, 83, 17, 0.719);
-   text-shadow: 1px 1px 10px black;
-   /* text-shadow: 2px 2px blue; */
-
-
+   font-family: 'Sacramento', cursive;
+   font-size: 70px;
+   background-color: rgba(156, 112, 82, 0.719);
 }
 .contain{
    text-align: center;
    margin:0px 30%;
 }
 
+/* --------------------------Input---------------------------------- */
+
 .inputfield{
    margin-bottom:10%;
-
+   text-align: center;
+   font-family: 'Nanum Pen Script', cursive;
 }
 
 .addTask{
    background-color: rgb(192, 120, 61);
+}
 
+/* ------------------------Output------------------------------------ */
+
+li{
+   list-style-type: none;
+   font-family: 'Nanum Pen Script', cursive;
 }
 
 .output{
    border: 1px solid black;
    text-align: center;
    padding-right: 40px;
-}
-h3{
-   font-family: 'Bungee Hairline', cursive;
-   text-shadow: 1px 1px 10px black;
-
-   color: rgb(133, 74, 31);
-   margin:5% 0px;
-}
-
+   padding-top: 9%;
+ }
+ 
 .beforeCheck{
-   margin : 2px;
    text-align: left;
-   padding: 1%;
+   padding: 5px;
    background-color: white;
+   margin: -10px 0px;
 }
 
 .taskOutBtn{
@@ -54,11 +53,9 @@ h3{
    padding-top: 0px;
    border-bottom-width: 0px;
    margin-bottom: 1px;
-   float: right;
-   margin: 0px 2px;
-   display: flex;
-
-  
+   float: right; 
+   margin: 0px 2px; 
+   display: flex; 
 }
 
 .textTask{
@@ -67,6 +64,13 @@ h3{
    color: gray;
 }
 
-li{
-   list-style-type: none;
+/* ------------------------Footer------------------------------------ */
+
+footer{
+   font-family: 'Nanum Pen Script', cursive;
+   margin: 30px 0px ;
+   background-color: rgba(114, 98, 87, 0.719);
+   text-align: right;
+   padding-right: 5%;
 }
+
