--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -7,7 +7,7 @@ h1{
    text-align: center;
    font-family: 'Sacramento', cursive;
    font-size: 70px;
-   background-color: rgba(156, 112, 82, 0.719);
+   background-color: rgba(182, 132, 98, 0.719);
 }
 .contain{
    text-align: center;
@@ -17,13 +17,17 @@ h1{
 /* --------------------------Input---------------------------------- */
 
 .inputfield{
-   margin-bottom:10%;
+   margin-bottom:3%;
    text-align: center;
    font-family: 'Nanum Pen Script', cursive;
+   font-size: 20px;
+
 }
 
 .addTask{
-   background-color: rgb(192, 120, 61);
+   background-color: rgb(139, 108, 82);
+   font-size: 20px;
+   color:white
 }
 
 /* ------------------------Output------------------------------------ */
@@ -31,13 +35,14 @@ h1{
 li{
    list-style-type: none;
    font-family: 'Nanum Pen Script', cursive;
+   font-size: 20px;
 }
 
 .output{
-   border: 1px solid black;
+   border: 2px solid black;
    text-align: center;
    padding-right: 40px;
-   padding-top: 9%;
+   padding-top: 8%;
  }
  
 .beforeCheck{
@@ -56,6 +61,8 @@ li{
    float: right; 
    margin: 0px 2px; 
    display: flex; 
+   font-size: 20px;
+
 }
 
 .textTask{
@@ -71,6 +78,6 @@ footer{
    margin: 30px 0px ;
    background-color: rgba(114, 98, 87, 0.719);
    text-align: right;
-   padding-right: 5%;
+   padding-right: 3%;
 }
 
