--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -6,12 +6,12 @@ body{
 h1{
    text-align: center;
    font-family: 'Sacramento', cursive;
-   font-size: 70px;
+   font-size: 400%;
    background-color: rgba(182, 132, 98, 0.719);
 }
 .contain{
    text-align: center;
-   margin:0px 30%;
+   margin:0px 20%;
 }
 
 /* --------------------------Input---------------------------------- */
@@ -20,13 +20,14 @@ h1{
    margin-bottom:3%;
    text-align: center;
    font-family: 'Nanum Pen Script', cursive;
-   font-size: 20px;
+   font-size: 120%;
+
 
 }
 
 .addTask{
    background-color: rgb(139, 108, 82);
-   font-size: 20px;
+   font-size: 70%;
    color:white
 }
 
@@ -35,21 +36,25 @@ h1{
 li{
    list-style-type: none;
    font-family: 'Nanum Pen Script', cursive;
-   font-size: 20px;
+   font-size: 100%;
+   
+ 
 }
 
 .output{
    border: 2px solid black;
    text-align: center;
-   padding-right: 40px;
+   padding-right: 8%;
    padding-top: 8%;
+   word-wrap: break-word;
+
  }
  
 .beforeCheck{
    text-align: left;
-   padding: 5px;
+   padding: 0.5%;
    background-color: white;
-   margin: -10px 0px;
+   margin: -1.5% 0px;
 }
 
 .taskOutBtn{
@@ -57,11 +62,10 @@ li{
    border-top-width: 0px;
    padding-top: 0px;
    border-bottom-width: 0px;
-   margin-bottom: 1px;
    float: right; 
    margin: 0px 2px; 
    display: flex; 
-   font-size: 20px;
+   font-size: 90%;
 
 }
 
@@ -75,7 +79,7 @@ li{
 
 footer{
    font-family: 'Nanum Pen Script', cursive;
-   margin: 30px 0px ;
+   margin: 5% 0px ;
    background-color: rgba(114, 98, 87, 0.719);
    text-align: right;
    padding-right: 3%;
