--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -9,10 +9,7 @@ h1{
    font-size: 400%;
    background-color: rgba(182, 132, 98, 0.719);
 }
-.contain{
-   text-align: center;
-   margin:0px 20%;
-}
+
 
 /* --------------------------Input---------------------------------- */
 
@@ -21,9 +18,14 @@ h1{
    text-align: center;
    font-family: 'Nanum Pen Script', cursive;
    font-size: 120%;
-
-
+   width: 100%;
+   padding-left: 40%;
 }
+
+#inputTask{
+   width: 30%;
+}
+
 
 .addTask{
    background-color: rgb(139, 108, 82);
@@ -37,16 +39,15 @@ li{
    list-style-type: none;
    font-family: 'Nanum Pen Script', cursive;
    font-size: 100%;
-   
- 
+   word-wrap: break-word;
 }
 
 .output{
    border: 2px solid black;
    text-align: center;
-   padding-right: 8%;
-   padding-top: 8%;
-   word-wrap: break-word;
+   padding-right: 6%;
+   padding-top: 2.5%;
+   margin: 0px 30%;
 
  }
  
