--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -13,7 +13,7 @@ h1{
 
 /* --------------------------Input---------------------------------- */
 
-.inputfield{
+.inputField{
    margin-bottom:3%;
    text-align: center;
    font-family: 'Nanum Pen Script', cursive;
