--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -8,6 +8,9 @@ h1{
    font-family: 'Sacramento', cursive;
    font-size: 400%;
    background-color: rgba(182, 132, 98, 0.719);
+   /* text-decoration: overline; */
+   text-decoration: underline ;
+
 }
 
 
