--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -27,6 +27,10 @@ h1{
 
 #inputTask{
    width: 30%;
+   border: 1px solid black;
+   border-radius: 5px;
+
+
 }
 
 
@@ -38,12 +42,25 @@ h1{
 
 /* ------------------------Output------------------------------------ */
 
+.headerOfList{
+   margin: 0px 30%;
+   background-color: rgba(182, 132, 98, 0.719);
+   height: 30px;
+   border-top: 2px solid black;
+   border-left: 2px solid black;
+   border-right: 2px solid black;
+   border-top-left-radius: 30px;
+   border-top-right-radius:30px;
+   text-align: center;
+
+}
+
 li{
    list-style-type: none;
    font-family: 'Nanum Pen Script', cursive;
    font-size: 100%;
    word-wrap: break-word;
-   border-radius: 100px;
+   border-radius: 10px;
 }
 
 .output{
@@ -81,12 +98,11 @@ li{
 
 
 }
-
 .textTask{
    text-decoration: line-through;
    background-color: lightgray;
    color: gray;
-   padding-left:40px;
+   margin-left:40px;
 }
 
 
