--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -51,32 +51,37 @@ h1{
    text-align: center;
 }
 
-li{
-   list-style-type: none;
+tr{
    font-family: 'Nanum Pen Script', cursive;
    font-size: 100%;
    word-wrap: break-word;
    border-radius: 10px;
+   margin-top: 10px;
 }
 
 .output{
    border: 2px solid black;
    text-align: center;
-   padding-right: 2.5%;
    padding-top: 2.5%;
+   padding-left: 30px;
    margin: 0px 30%;
  }
  
 .beforeCheck{
-   text-align: left;
-   padding: 0.5%;
+   /* text-align: left; */
+   padding: 10px;
    background-color: white;
-   margin: -1.5% 0px;
-   padding-left:10px;
+   margin: 10px;
+   /* padding-left:10px;  */
 }
 
 #deleteBtn{
-   margin-right: 10px;
+   /* text-align: right; */
+   margin: 0 5px;
+}
+.checkCompleted{
+   margin-left:90px;
+
 }
 
 .taskOutBtn{
