--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -8,7 +8,7 @@ h1{
    font-size: 400%;
    background-color: rgba(182, 132, 98, 0.719);
    /* text-decoration: overline; */
-   text-decoration: underline ;
+   /* text-decoration: underline ; */
 }
 
 
@@ -104,6 +104,7 @@ h1{
    text-decoration: line-through;
    background-color: lightgray;
    color: gray;
+   padding-left: 40px;
 }
 
 
